ocean/db/ebtree/c/src/eb128tree.h

/* These types may sometimes already be defined */
typedef __uint128_t u128;
typedef __int128_t s128;
/* This structure carries a node, a leaf, and a key. It must start with the
 * eb_node so that it can be cast into an eb_node. We could also have put some
 * sort of transparent union here to reduce the indirection level, but the fact
 * is, the end user is not meant to manipulate internals, so this is pointless.
 */
struct eb128_node {
	struct eb_node node; /* the tree node, must be at the beginning */
	u128 key;
};
/*
 * Exported functions and macros.
 * Many of them are always inlined because they are extremely small, and
 * are generally called at most once or twice in a program.
 */

/* Return leftmost node in the tree, or NULL if none */
extern struct eb128_node *eb128_first(struct eb_root *root);
/* Return rightmost node in the tree, or NULL if none */
extern struct eb128_node *eb128_last(struct eb_root *root);
/* Return next node in the tree, or NULL if none */
extern struct eb128_node *eb128_next(struct eb128_node *eb128);
/* Return previous node in the tree, or NULL if none */
extern struct eb128_node *eb128_prev(struct eb128_node *eb128);
/* Return next node in the tree, skipping duplicates, or NULL if none */
extern struct eb128_node *eb128_next_unique(struct eb128_node *eb128);
/* Return previous node in the tree, skipping duplicates, or NULL if none */
extern struct eb128_node *eb128_prev_unique(struct eb128_node *eb128);
/* Delete node from the tree if it was linked in. Mark the node unused. Note
 * that this function relies on a non-inlined generic function: eb_delete.
 */
extern void eb128_delete(struct eb128_node *eb128);
/*
 * The following functions are not inlined by default. They are declared
 * in eb128tree.c, which simply relies on their inline version.
 */
extern struct eb128_node *eb128_lookup(struct eb_root *root, u128 x);
extern struct eb128_node *eb128i_lookup(struct eb_root *root, s128 x);
extern struct eb128_node *eb128_lookup_le(struct eb_root *root, u128 x);
extern struct eb128_node *eb128_lookup_ge(struct eb_root *root, u128 x);
extern struct eb128_node *eb128_insert(struct eb_root *root, struct eb128_node *new);
extern struct eb128_node *eb128i_insert(struct eb_root *root, struct eb128_node *new);